--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.lyqc.report</groupId>
@@ -10,7 +11,8 @@
 		<module>lyqc-report-iface</module>
 		<module>lyqc-report-soa</module>
 		<module>lyqc-report-web</module>
-	</modules>
+    <module>lyqc-report-parent</module>
+  </modules>
   
   <build>
 		<pluginManagement>
