--- a/lyqc-report-soa/pom.xml
+++ b/lyqc-report-soa/pom.xml
@@ -59,6 +59,11 @@
 		<version>4.9</version>
   	</dependency>
   	<dependency>
+	    <groupId>ant</groupId>
+	    <artifactId>ant</artifactId>
+	    <version>1.7.0</version>
+	</dependency>
+  	<dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-test</artifactId>
 	</dependency>
